Bug 557432 - Reduce parallelism of media mochitests. r=test-fix a=roc
UltraBlame original commit: 65f20938e5d6d23df3f372040baa121e7a2b3314

--- a/content/media/test/file_access_controls.html
+++ b/content/media/test/file_access_controls.html
@@ -1137,6 +1137,31 @@ gVideo
 ;
 gVideo
 =
+null
+;
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+Components
+.
+utils
+.
+forceGC
+(
+)
+;
+gVideo
+=
 createVideo
 (
 )
@@ -1327,6 +1352,10 @@ setBoolPref
 enforce_same_site_origin
 "
 gOldPref
+)
+;
+mediaTestCleanup
+(
 )
 ;
 opener
