--- a/content/media/test/test_access_control.html
+++ b/content/media/test/test_access_control.html
@@ -99,6 +99,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -250,6 +271,10 @@ done
 (
 )
 {
+mediaTestCleanup
+(
+)
+;
 SimpleTest
 .
 finish
