--- a/content/media/test/test_audio1.html
+++ b/content/media/test/test_audio1.html
@@ -152,32 +152,19 @@ text
 javascript
 "
 >
-for
-(
 var
-i
+manager
 =
-0
+new
+MediaTestManager
 ;
-i
-<
-gAudioTests
-.
-length
-;
-+
-+
-i
+function
+startTest
+(
+test
+token
 )
 {
-var
-test
-=
-gAudioTests
-[
-i
-]
-;
 var
 a1
 =
@@ -198,7 +185,14 @@ test
 type
 )
 )
-continue
+return
+;
+manager
+.
+started
+(
+token
+)
 ;
 is
 (
@@ -236,7 +230,26 @@ set
 "
 )
 ;
+a1
+=
+null
+;
+manager
+.
+finished
+(
+token
+)
+;
 }
+manager
+.
+runTests
+(
+gAudioTests
+startTest
+)
+;
 <
 /
 script
