--- a/content/media/test/test_audio2.html
+++ b/content/media/test/test_audio2.html
@@ -160,32 +160,19 @@ Audio
 (
 )
 ;
-for
-(
 var
-i
+manager
 =
-0
+new
+MediaTestManager
 ;
-i
-<
-gAudioTests
-.
-length
-;
-+
-+
-i
+function
+startTest
+(
+test
+token
 )
 {
-var
-test
-=
-gAudioTests
-[
-i
-]
-;
 if
 (
 !
@@ -199,6 +186,13 @@ type
 )
 )
 continue
+;
+manager
+.
+started
+(
+token
+)
 ;
 var
 a1
@@ -263,7 +257,22 @@ OK
 "
 )
 ;
+manager
+.
+finished
+(
+token
+)
+;
 }
+manager
+.
+runTests
+(
+gAudioTests
+startTest
+)
+;
 <
 /
 script
