--- a/content/media/test/test_autoplay.html
+++ b/content/media/test/test_autoplay.html
@@ -100,6 +100,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -413,6 +434,10 @@ attribute
 not
 set
 "
+)
+;
+mediaTestCleanup
+(
 )
 ;
 <
