--- a/content/media/test/test_buffered.html
+++ b/content/media/test/test_buffered.html
@@ -244,10 +244,10 @@ HTMLMediaElement
 buffered
 .
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 ended
@@ -562,25 +562,22 @@ range
 ;
 v
 .
-_finished
-=
-true
-;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+parentNode
 .
-finish
+removeChild
 (
+v
 )
 ;
-}
+manager
+.
+finished
+(
+v
+.
+token
+)
+;
 return
 false
 ;
@@ -644,22 +641,11 @@ test
 s
 )
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSeekTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -674,27 +660,8 @@ video
 '
 )
 ;
-var
-test
-=
-gSeekTests
-[
-i
-]
-;
 if
 (
-!
-v
-.
-canPlayType
-(
-test
-.
-type
-)
-|
-|
 !
 supportsBuffered
 (
@@ -703,7 +670,20 @@ test
 type
 )
 )
-continue
+return
+;
+v
+.
+token
+=
+token
+;
+manager
+.
+started
+(
+token
+)
 ;
 v
 .
@@ -759,44 +739,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSeekTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
