--- a/content/media/test/test_bug465498.html
+++ b/content/media/test/test_bug465498.html
@@ -192,10 +192,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 startTest
@@ -415,46 +415,32 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
-for
+function
+initTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 var
 type
 =
@@ -488,14 +474,6 @@ createElement
 type
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 if
 (
 !
@@ -508,7 +486,20 @@ test
 type
 )
 )
-continue
+return
+;
+v
+.
+token
+=
+token
+;
+manager
+.
+started
+(
+token
+)
 ;
 v
 .
@@ -607,44 +598,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+initTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
