--- a/content/media/test/test_bug493187.html
+++ b/content/media/test/test_bug493187.html
@@ -221,10 +221,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 start
@@ -310,47 +310,33 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSeekTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSeekTests
-[
-i
-]
-;
 /
 /
 TODO
@@ -425,7 +411,7 @@ if
 !
 isVideo
 )
-continue
+return
 ;
 var
 v
@@ -439,19 +425,18 @@ video
 '
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -531,44 +516,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSeekTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
