--- a/content/media/test/test_bug495145.html
+++ b/content/media/test/test_bug495145.html
@@ -193,10 +193,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 start
@@ -274,17 +274,22 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 return
@@ -385,17 +390,22 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
@@ -404,6 +414,7 @@ createVideo
 (
 test
 x
+token
 )
 {
 var
@@ -418,20 +429,18 @@ video
 '
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-return
-null
 ;
 v
 .
@@ -523,83 +532,45 @@ appendChild
 v
 )
 ;
-videos
-.
-push
-(
-v
-)
-;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 createVideo
 (
 test
 1
+token
++
+"
+a
+"
 )
 ;
 createVideo
 (
 test
 2
-)
-;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
+token
++
 "
-No
-types
-supported
+b
 "
 )
 ;
 }
-else
-{
-SimpleTest
+manager
 .
-waitForExplicitFinish
+runTests
 (
+gSmallTests
+startTest
 )
 ;
-}
 <
 /
 script
