--- a/content/media/test/test_can_play_type_no_ogg.html
+++ b/content/media/test/test_can_play_type_no_ogg.html
@@ -103,6 +103,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -232,6 +253,10 @@ v
 '
 )
 false
+)
+;
+mediaTestCleanup
+(
 )
 ;
 <
