--- a/content/media/test/test_decode_error.html
+++ b/content/media/test/test_decode_error.html
@@ -177,22 +177,20 @@ javascript
 "
 >
 var
-testsWaiting
+manager
 =
-0
+new
+MediaTestManager
 ;
-gDecodeErrorTests
-.
-forEach
-(
 function
+startTest
 (
 test
-index
+token
 )
 {
 var
-v1
+v
 =
 document
 .
@@ -203,23 +201,14 @@ video
 "
 )
 ;
-if
-(
-!
-v1
+manager
 .
-canPlayType
+started
 (
-test
-.
-type
+token
 )
-)
-{
-return
 ;
-}
-v1
+v
 .
 addEventListener
 (
@@ -346,7 +335,7 @@ true
 false
 )
 ;
-v1
+v
 .
 addEventListener
 (
@@ -393,31 +382,18 @@ event
 "
 )
 ;
-testsWaiting
--
-=
-1
-;
-if
-(
-testsWaiting
-=
-=
-0
-)
-{
-SimpleTest
+manager
 .
-finish
+finished
 (
+token
 )
 ;
-}
 }
 false
 )
 ;
-v1
+v
 .
 addEventListener
 (
@@ -442,13 +418,13 @@ event
 false
 )
 ;
-v1
+v
 .
 autoplay
 =
 true
 ;
-v1
+v
 .
 addEventListener
 (
@@ -473,7 +449,7 @@ event
 false
 )
 ;
-v1
+v
 .
 src
 =
@@ -481,47 +457,21 @@ test
 .
 name
 ;
-testsWaiting
-+
-=
-1
-;
-v1
+v
 .
 load
 (
 )
 ;
 }
-)
-;
-if
-(
-testsWaiting
->
-0
-)
-{
-SimpleTest
+manager
 .
-waitForExplicitFinish
+runTests
 (
+gDecodeErrorTests
+startTest
 )
 ;
-}
-else
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
 <
 /
 script
