--- a/content/media/test/test_delay_load.html
+++ b/content/media/test/test_delay_load.html
@@ -325,6 +325,10 @@ close
 )
 ;
 }
+mediaTestCleanup
+(
+)
+;
 SimpleTest
 .
 finish
@@ -485,21 +489,6 @@ video
 "
 )
 ;
-if
-(
-!
-v
-.
-canPlayType
-(
-type
-)
-)
-{
-return
-null
-;
-}
 v
 .
 src
@@ -527,31 +516,13 @@ return
 v
 ;
 }
-for
-(
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
-)
-{
 var
 test
 =
+getPlayableVideo
+(
 gSmallTests
-[
-i
-]
+)
 ;
 /
 /
@@ -562,7 +533,7 @@ a
 load
 .
 var
-v1
+v
 =
 createVideo
 (
@@ -577,24 +548,13 @@ type
 "
 )
 ;
-if
-(
-v1
-=
-=
-null
-)
-{
-continue
-;
-}
 document
 .
 body
 .
 appendChild
 (
-v1
+v
 )
 ;
 /
@@ -604,8 +564,7 @@ add
 then
 remove
 .
-var
-v1
+v
 =
 createVideo
 (
@@ -620,16 +579,7 @@ type
 "
 )
 ;
-if
-(
-!
-v1
-)
-{
-continue
-;
-}
-v1
+v
 .
 load
 (
@@ -641,16 +591,16 @@ body
 .
 appendChild
 (
-v1
+v
 )
 ;
-v1
+v
 .
 parentNode
 .
 removeChild
 (
-v1
+v
 )
 ;
 /
@@ -659,8 +609,7 @@ Load
 and
 add
 .
-var
-v2
+v
 =
 createVideo
 (
@@ -675,7 +624,7 @@ type
 "
 )
 ;
-v2
+v
 .
 load
 (
@@ -687,7 +636,7 @@ body
 .
 appendChild
 (
-v2
+v
 )
 ;
 /
@@ -697,8 +646,7 @@ outside
 of
 doc
 .
-var
-v3
+v
 =
 createVideo
 (
@@ -713,7 +661,7 @@ type
 "
 )
 ;
-v3
+v
 .
 load
 (
@@ -741,8 +689,7 @@ UniversalXPConnect
 "
 )
 ;
-var
-v4
+v
 =
 createVideo
 (
@@ -757,7 +704,7 @@ type
 "
 )
 ;
-v4
+v
 .
 load
 (
@@ -883,7 +830,7 @@ body
 .
 appendChild
 (
-v4
+v
 )
 ;
 testWindows
@@ -893,7 +840,6 @@ push
 w
 )
 ;
-}
 if
 (
 gRegisteredElements
