--- a/content/media/test/test_media_selection.html
+++ b/content/media/test/test_media_selection.html
@@ -150,11 +150,11 @@ text
 javascript
 "
 >
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
+var
+manager
+=
+new
+MediaTestManager
 ;
 function
 maketest
@@ -168,7 +168,7 @@ check_metadata
 return
 function
 (
-testNum
+token
 )
 {
 var
@@ -181,6 +181,13 @@ createElement
 '
 video
 '
+)
+;
+manager
+.
+started
+(
+token
 )
 ;
 var
@@ -218,7 +225,7 @@ HAVE_METADATA
 test
 '
 +
-testNum
+token
 +
 '
 readyState
@@ -262,7 +269,7 @@ name
 test
 '
 +
-testNum
+token
 )
 ;
 /
@@ -291,7 +298,7 @@ NETWORK_IDLE
 test
 '
 +
-testNum
+token
 +
 '
 networkState
@@ -327,8 +334,11 @@ removeChild
 e
 )
 ;
-runNextTest
+manager
+.
+finished
 (
+token
 )
 ;
 }
@@ -409,7 +419,7 @@ HAVE_NOTHING
 test
 '
 +
-testNum
+token
 +
 '
 readyState
@@ -432,8 +442,11 @@ removeChild
 e
 )
 ;
-runNextTest
+manager
+.
+finished
 (
+token
 )
 ;
 }
@@ -1013,56 +1026,24 @@ check
 ;
 }
 function
-runNextTest
+startTest
 (
+test
+token
 )
 {
-if
+test
 (
-nextTest
->
-=
-subtests
+token
+)
+;
+}
+manager
 .
-length
-)
-{
-SimpleTest
-.
-finish
+runTests
 (
-)
-;
-return
-;
-}
-setTimeout
-(
-function
-(
-)
-{
 subtests
-[
-nextTest
-]
-(
-nextTest
-)
-;
-nextTest
-+
-=
-1
-;
-}
-0
-)
-;
-}
-addLoadEvent
-(
-runNextTest
+startTest
 )
 ;
 <
