--- a/content/media/test/test_mozLoadFrom.html
+++ b/content/media/test/test_mozLoadFrom.html
@@ -149,9 +149,10 @@ javascript
 "
 >
 var
-testsWaiting
+manager
 =
-0
+new
+MediaTestManager
 ;
 function
 cloneLoaded
@@ -229,25 +230,15 @@ _expectedDuration
 )
 ;
 }
--
--
-testsWaiting
-;
-if
-(
-testsWaiting
-=
-=
-0
-)
-{
-SimpleTest
+manager
 .
-finish
+finished
 (
+e
+.
+token
 )
 ;
-}
 }
 function
 tryClone
@@ -271,6 +262,14 @@ cloneNode
 (
 false
 )
+;
+clone
+.
+token
+=
+e
+.
+token
 ;
 if
 (
@@ -363,39 +362,13 @@ false
 )
 ;
 }
-/
-/
-Find
-something
-we
-can
-play
-for
+function
+initTest
 (
-var
-i
-=
-0
-;
-i
-<
-gCloneTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gCloneTests
-[
-i
-]
-;
 var
 elemType
 =
@@ -482,42 +455,29 @@ load
 (
 )
 ;
-+
-+
-testsWaiting
-;
-}
-}
-if
-(
-testsWaiting
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-Can
-'
-t
-play
-anything
-"
-)
-;
-}
-else
-{
-SimpleTest
+e
 .
-waitForExplicitFinish
+token
+=
+token
+;
+manager
+.
+started
 (
+token
 )
 ;
 }
+}
+manager
+.
+runTests
+(
+gCloneTests
+initTest
+)
+;
 <
 /
 script
