--- a/content/media/test/test_networkState.html
+++ b/content/media/test/test_networkState.html
@@ -99,11 +99,40 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onunload
+=
+"
+mediaTestCleanup
+(
+)
+;
+"
 >
 <
 video
