--- a/content/media/test/test_paused_after_ended.html
+++ b/content/media/test/test_paused_after_ended.html
@@ -150,10 +150,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 ended
@@ -188,38 +188,21 @@ end
 "
 )
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+manager
 .
-finish
+finished
 (
+v
+.
+token
 )
 ;
 }
-}
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gPausedAfterEndedTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -234,27 +217,18 @@ video
 '
 )
 ;
-var
-test
-=
-gPausedAfterEndedTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+v
+;
+manager
 .
-type
+started
+(
+v
 )
-)
-continue
 ;
 v
 .
@@ -341,36 +315,14 @@ false
 )
 ;
 }
-if
-(
-videos
+manager
 .
-length
-=
-=
-0
-)
-{
-todo
+runTests
 (
-false
-"
-No
-types
-supported
-"
+gPausedAfterEndedTests
+startTest
 )
 ;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
