--- a/content/media/test/test_play_events.html
+++ b/content/media/test/test_play_events.html
@@ -141,10 +141,10 @@ test
 script
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 var
 tokens
@@ -282,12 +282,6 @@ event
 .
 target
 ;
-v
-.
-_finished
-=
-true
-;
 is
 (
 v
@@ -310,38 +304,30 @@ v
 src
 )
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
-}
-for
+function
+initTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -356,39 +342,24 @@ video
 '
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
 _state
 =
 0
-;
-v
-.
-_finished
-=
-false
 ;
 [
 "
@@ -463,44 +434,15 @@ play
 (
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+initTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
