--- a/content/media/test/test_play_events_2.html
+++ b/content/media/test/test_play_events_2.html
@@ -145,10 +145,10 @@ test
 script
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 var
 tokens
@@ -314,38 +314,30 @@ v
 src
 )
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
-}
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -360,27 +352,18 @@ video
 '
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -464,44 +447,15 @@ play
 (
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
