--- a/content/media/test/test_playback.html
+++ b/content/media/test/test_playback.html
@@ -155,81 +155,16 @@ javascript
 "
 >
 var
-PARALLEL_TESTS
+manager
 =
-2
-;
-var
-testIndex
-=
-0
-;
-var
-videos
-=
-[
-]
-;
-var
-testsWaiting
-=
-0
+new
+MediaTestManager
 ;
 function
-startTests
+startTest
 (
-)
-{
-for
-(
-var
-i
-=
-0
-;
-i
-<
-videos
-.
-length
-;
-+
-+
-i
-)
-{
-document
-.
-body
-.
-removeChild
-(
-videos
-[
-i
-]
-)
-;
-}
-videos
-=
-[
-]
-;
-while
-(
-videos
-.
-length
-<
-PARALLEL_TESTS
-&
-&
-testIndex
-<
-gPlayTests
-.
-length
+test
+token
 )
 {
 var
@@ -244,31 +179,18 @@ video
 '
 )
 ;
-var
-test
-=
-gPlayTests
-[
-testIndex
-]
-;
-+
-+
-testIndex
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -520,22 +442,40 @@ ended
 "
 )
 ;
--
--
-testsWaiting
-;
 if
 (
-testsWaiting
-=
-=
-0
+v
+.
+ended
+&
+&
+v
+.
+seenSuspend
 )
 {
-setTimeout
+if
 (
-startTests
-0
+v
+.
+parentNode
+)
+v
+.
+parentNode
+.
+removeChild
+(
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
@@ -607,22 +547,40 @@ suspend
 "
 )
 ;
--
--
-testsWaiting
-;
 if
 (
-testsWaiting
-=
-=
-0
+v
+.
+ended
+&
+&
+v
+.
+seenSuspend
 )
 {
-setTimeout
+if
 (
-startTests
-0
+v
+.
+parentNode
+)
+v
+.
+parentNode
+.
+removeChild
+(
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
@@ -806,11 +764,6 @@ checkSuspended
 false
 )
 ;
-testsWaiting
-+
-=
-2
-;
 document
 .
 body
@@ -826,70 +779,13 @@ play
 (
 )
 ;
-videos
-.
-push
-(
-v
-)
-;
 }
-if
-(
-videos
+manager
 .
-length
-=
-=
-0
-)
-{
-/
-/
-No
-new
-tests
-were
-spawned
-perhaps
-the
-remaining
-tests
-on
-the
-list
-are
-/
-/
-not
-supported
-or
-we
-just
-reached
-the
-end
-of
-the
-list
-.
-SimpleTest
-.
-finish
+runTests
 (
-)
-;
-}
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-addLoadEvent
-(
-startTests
+gPlayTests
+startTest
 )
 ;
 <
