--- a/content/media/test/test_playback_errors.html
+++ b/content/media/test/test_playback_errors.html
@@ -155,81 +155,16 @@ javascript
 "
 >
 var
-PARALLEL_TESTS
+manager
 =
-2
-;
-var
-testIndex
-=
-0
-;
-var
-videos
-=
-[
-]
-;
-var
-testsWaiting
-=
-0
+new
+MediaTestManager
 ;
 function
-startTests
+startTest
 (
-)
-{
-for
-(
-var
-i
-=
-0
-;
-i
-<
-videos
-.
-length
-;
-+
-+
-i
-)
-{
-document
-.
-body
-.
-removeChild
-(
-videos
-[
-i
-]
-)
-;
-}
-videos
-=
-[
-]
-;
-while
-(
-videos
-.
-length
-<
-PARALLEL_TESTS
-&
-&
-testIndex
-<
-gErrorTests
-.
-length
+test
+token
 )
 {
 var
@@ -244,39 +179,12 @@ video
 '
 )
 ;
-var
-test
-=
-gErrorTests
-[
-testIndex
-]
-;
-+
-+
-testIndex
-;
-if
+manager
+.
+started
 (
-!
-v
-.
-canPlayType
-(
-test
-.
-type
+token
 )
-)
-continue
-;
-v
-.
-src
-=
-test
-.
-name
 ;
 v
 .
@@ -310,25 +218,22 @@ _ignore
 =
 true
 ;
--
--
-testsWaiting
-;
-if
+v
+.
+parentNode
+.
+removeChild
 (
-testsWaiting
-=
-=
-0
-)
-{
-setTimeout
-(
-startTests
-0
+v
 )
 ;
-}
+manager
+.
+finished
+(
+token
+)
+;
 }
 var
 checkError
@@ -448,9 +353,13 @@ checkEnded
 false
 )
 ;
-+
-+
-testsWaiting
+v
+.
+src
+=
+test
+.
+name
 ;
 document
 .
@@ -467,70 +376,13 @@ play
 (
 )
 ;
-videos
-.
-push
-(
-v
-)
-;
 }
-if
-(
-videos
+manager
 .
-length
-=
-=
-0
-)
-{
-/
-/
-No
-new
-tests
-were
-spawned
-perhaps
-the
-remaining
-tests
-on
-the
-list
-are
-/
-/
-not
-supported
-or
-we
-just
-reached
-the
-end
-of
-the
-list
-.
-SimpleTest
-.
-finish
+runTests
 (
-)
-;
-}
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-addLoadEvent
-(
-startTests
+gErrorTests
+startTest
 )
 ;
 <
