--- a/content/media/test/test_progress.html
+++ b/content/media/test/test_progress.html
@@ -165,10 +165,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 do_progress
@@ -349,46 +349,32 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gProgressTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gProgressTests
-[
-i
-]
-;
 var
 type
 =
@@ -422,19 +408,18 @@ createElement
 type
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -509,44 +494,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gProgressTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
