--- a/content/media/test/test_seek.html
+++ b/content/media/test/test_seek.html
@@ -382,17 +382,22 @@ javascript
 "
 >
 var
-testNum
+manager
 =
-0
+new
+MediaTestManager
 ;
-var
-testsWaiting
+const
+NUM_SEEK_TESTS
 =
-0
-;
+11
+function
+createTestArray
+(
+)
+{
 var
-videos
+tests
 =
 [
 ]
@@ -409,30 +414,24 @@ video
 "
 )
 ;
-function
-doNextFile
+for
 (
-)
-{
-if
-(
+var
 testNum
->
 =
+0
+;
+testNum
+<
 gSeekTests
 .
 length
+;
+testNum
++
++
 )
 {
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
 var
 test
 =
@@ -440,10 +439,6 @@ gSeekTests
 [
 testNum
 ]
-;
-+
-+
-testNum
 ;
 if
 (
@@ -458,11 +453,7 @@ type
 )
 )
 {
-doNextFile
-(
-)
-;
-return
+continue
 ;
 }
 for
@@ -475,11 +466,67 @@ i
 i
 <
 =
-11
+NUM_SEEK_TESTS
 ;
 +
 +
 i
+)
+{
+var
+t
+=
+new
+Object
+;
+t
+.
+name
+=
+test
+.
+name
+;
+t
+.
+type
+=
+test
+.
+type
+;
+t
+.
+duration
+=
+test
+.
+duration
+;
+t
+.
+number
+=
+i
+;
+tests
+.
+push
+(
+t
+)
+;
+}
+}
+return
+tests
+;
+}
+function
+startTest
+(
+test
+token
 )
 {
 var
@@ -494,6 +541,13 @@ video
 '
 )
 ;
+manager
+.
+started
+(
+token
+)
+;
 v
 .
 src
@@ -501,6 +555,12 @@ src
 test
 .
 name
+;
+v
+.
+token
+=
+token
 ;
 document
 .
@@ -523,7 +583,9 @@ seek
 test
 "
 +
-i
+test
+.
+number
 ;
 var
 localIs
@@ -598,62 +660,47 @@ localFinish
 =
 function
 (
+v
+manager
 )
 {
--
--
-testsWaiting
-;
+return
+function
+(
+)
+{
 if
 (
-testsWaiting
-=
-=
-0
+v
+.
+parentNode
 )
 {
-for
-(
-var
-j
-=
-0
-;
-j
-<
-videos
+v
 .
-length
-;
-+
-+
-j
-)
-{
-document
-.
-body
+parentNode
 .
 removeChild
 (
-videos
-[
-j
-]
+v
 )
 ;
 }
-videos
-=
-[
-]
-;
-doNextFile
+manager
+.
+finished
 (
+v
+.
+token
 )
 ;
 }
 }
+(
+v
+manager
+)
 ;
 dump
 (
@@ -663,7 +710,9 @@ test
 :
 "
 +
-i
+test
+.
+number
 +
 "
 \
@@ -677,7 +726,9 @@ window
 test_seek
 '
 +
-i
+test
+.
+number
 ]
 (
 v
@@ -691,20 +742,15 @@ localOk
 localFinish
 )
 ;
-+
-+
-testsWaiting
-;
 }
-}
-doNextFile
+manager
+.
+runTests
+(
+createTestArray
 (
 )
-;
-SimpleTest
-.
-waitForExplicitFinish
-(
+startTest
 )
 ;
 <
