--- a/content/media/test/test_seek_out_of_range.html
+++ b/content/media/test/test_seek_out_of_range.html
@@ -156,10 +156,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 /
 /
@@ -347,17 +347,22 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
@@ -461,32 +466,13 @@ _played
 true
 ;
 }
-for
+function
+initTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 var
 type
 =
@@ -520,19 +506,18 @@ createElement
 type
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -633,44 +618,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+initTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
