--- a/content/media/test/test_timeupdate_small_files.html
+++ b/content/media/test/test_timeupdate_small_files.html
@@ -193,10 +193,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 timeupdate
@@ -253,54 +253,38 @@ v
 currentTime
 )
 ;
-e
-.
-target
+v
 .
 _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 var
 type
 =
@@ -334,19 +318,18 @@ createElement
 type
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -413,44 +396,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
