--- a/content/media/test/test_bug448534.html
+++ b/content/media/test/test_bug448534.html
@@ -186,10 +186,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 loaded
@@ -327,39 +327,24 @@ Document
 "
 )
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+manager
 .
-finish
+finished
 (
+v
+.
+token
 )
 ;
 return
 false
 ;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -374,27 +359,18 @@ video
 '
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -458,44 +434,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
