--- a/content/media/test/test_can_play_type.html
+++ b/content/media/test/test_can_play_type.html
@@ -99,6 +99,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -277,6 +298,10 @@ check
 "
 "
 "
+)
+;
+mediaTestCleanup
+(
 )
 ;
 <
