--- a/content/media/test/test_can_play_type_wave.html
+++ b/content/media/test/test_can_play_type_wave.html
@@ -102,6 +102,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -234,6 +255,10 @@ v
 '
 )
 true
+)
+;
+mediaTestCleanup
+(
 )
 ;
 <
