--- a/content/media/test/test_load_candidates.html
+++ b/content/media/test/test_load_candidates.html
@@ -222,10 +222,10 @@ Bug
 *
 /
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 finish
@@ -233,11 +233,16 @@ finish
 evt
 )
 {
-is
-(
+var
+v
+=
 evt
 .
 target
+;
+is
+(
+v
 .
 _error
 false
@@ -252,36 +257,35 @@ error
 -
 "
 +
-evt
-.
-target
+v
 .
 _name
 )
 ;
-evt
-.
-target
+v
 .
 _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
 )
 ;
-}
+manager
+.
+finished
+(
+v
+.
+token
+)
+;
 }
 function
 errorHandler
@@ -362,22 +366,11 @@ webm
 "
 }
 ;
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -392,27 +385,18 @@ video
 '
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -543,44 +527,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
