--- a/content/media/test/test_new_audio.html
+++ b/content/media/test/test_new_audio.html
@@ -222,14 +222,10 @@ Bug
 *
 /
 var
-testsStarted
+manager
 =
-0
-;
-var
-testsComplete
-=
-0
+new
+MediaTestManager
 ;
 var
 player
@@ -239,38 +235,13 @@ Audio
 (
 )
 ;
-var
-audios
-=
-[
-]
-;
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gAudioTests
-.
-length
-;
-i
-+
-+
+test
+token
 )
 {
-var
-test
-=
-gAudioTests
-[
-i
-]
-;
 if
 (
 !
@@ -283,7 +254,14 @@ test
 type
 )
 )
-continue
+return
+;
+manager
+.
+started
+(
+token
+)
 ;
 var
 a
@@ -295,10 +273,6 @@ test
 .
 name
 )
-;
-+
-+
-testsStarted
 ;
 a
 .
@@ -365,65 +339,26 @@ did
 "
 )
 ;
-testsComplete
-+
-+
-;
-if
-(
-testsStarted
-=
-=
-testsComplete
-)
-{
-SimpleTest
+manager
 .
-finish
+finished
 (
+token
 )
 ;
-}
 }
 false
 )
 ;
-audios
+}
+manager
 .
-push
+runTests
 (
-a
+gAudioTests
+startTest
 )
 ;
-}
-if
-(
-testsStarted
-!
-=
-0
-)
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
-else
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
 <
 /
 script
