--- a/content/media/test/test_paused.html
+++ b/content/media/test/test_paused.html
@@ -99,6 +99,27 @@ css
 /
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+manifest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -226,6 +247,10 @@ initially
 be
 true
 "
+)
+;
+mediaTestCleanup
+(
 )
 ;
 <
