--- a/content/media/test/test_preload_actions.html
+++ b/content/media/test/test_preload_actions.html
@@ -275,10 +275,36 @@ Bug
 *
 /
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
+;
+manager
+.
+onFinished
+=
+function
+(
+)
+{
+is
+(
+gotLoadEvent
+true
+"
+Should
+not
+have
+delayed
+the
+load
+event
+indefinitely
+"
+)
+;
+}
 ;
 var
 test
@@ -287,6 +313,11 @@ getPlayableVideo
 (
 gSeekTests
 )
+;
+var
+gTest
+=
+test
 ;
 var
 bogusSrc
@@ -358,6 +389,7 @@ m
 function
 maybeFinish
 (
+v
 n
 )
 {
@@ -369,53 +401,22 @@ n
 "
 )
 ;
-setTimeout
-(
-function
-(
-)
-{
-if
-(
-!
-finished
-&
-&
-AllFinished
-(
-videos
-)
-)
-{
-finished
-=
-true
-;
-is
-(
-gotLoadEvent
-true
-"
-Should
-not
-have
-delayed
-the
-load
-event
-indefinitely
-"
-)
-;
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
 )
 ;
-}
-}
-0
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 }
@@ -659,6 +660,7 @@ true
 ;
 maybeFinish
 (
+v
 1
 )
 ;
@@ -914,6 +916,7 @@ true
 ;
 maybeFinish
 (
+v
 2
 )
 ;
@@ -1119,6 +1122,7 @@ true
 ;
 maybeFinish
 (
+v
 3
 )
 ;
@@ -1422,6 +1426,9 @@ true
 ;
 maybeFinish
 (
+e
+.
+target
 4
 )
 ;
@@ -1683,6 +1690,7 @@ true
 ;
 maybeFinish
 (
+v
 5
 )
 ;
@@ -1951,6 +1959,7 @@ true
 ;
 maybeFinish
 (
+v
 6
 )
 ;
@@ -2307,9 +2316,14 @@ ended
 "
 )
 ;
+var
+v
+=
 e
 .
 target
+;
+v
 .
 _finished
 =
@@ -2317,6 +2331,7 @@ true
 ;
 maybeFinish
 (
+v
 7
 )
 ;
@@ -2637,6 +2652,7 @@ true
 ;
 maybeFinish
 (
+v
 8
 )
 ;
@@ -2871,6 +2887,7 @@ true
 ;
 maybeFinish
 (
+v
 9
 )
 ;
@@ -3073,6 +3090,7 @@ true
 ;
 maybeFinish
 (
+v
 10
 )
 ;
@@ -3289,6 +3307,7 @@ true
 ;
 maybeFinish
 (
+v
 11
 )
 ;
@@ -3489,6 +3508,7 @@ true
 ;
 maybeFinish
 (
+v
 12
 )
 ;
@@ -3744,6 +3764,7 @@ true
 ;
 maybeFinish
 (
+v
 13
 )
 ;
@@ -4010,9 +4031,14 @@ ended
 "
 )
 ;
+var
+v
+=
 e
 .
 target
+;
+v
 .
 _finished
 =
@@ -4020,6 +4046,7 @@ true
 ;
 maybeFinish
 (
+v
 14
 )
 ;
@@ -4198,9 +4225,14 @@ ended
 "
 )
 ;
+var
+v
+=
 e
 .
 target
+;
+v
 .
 _finished
 =
@@ -4208,6 +4240,7 @@ true
 ;
 maybeFinish
 (
+v
 15
 )
 ;
@@ -4366,9 +4399,14 @@ ended
 "
 )
 ;
+var
+v
+=
 e
 .
 target
+;
+v
 .
 _finished
 =
@@ -4376,6 +4414,7 @@ true
 ;
 maybeFinish
 (
+v
 16
 )
 ;
@@ -4493,9 +4532,14 @@ ended
 "
 )
 ;
+var
+v
+=
 e
 .
 target
+;
+v
 .
 _finished
 =
@@ -4503,6 +4547,7 @@ true
 ;
 maybeFinish
 (
+v
 17
 )
 ;
@@ -4583,37 +4628,13 @@ name
 }
 ]
 ;
-if
+function
+startTest
 (
 test
+token
 )
 {
-for
-(
-var
-i
-=
-0
-;
-i
-<
-tests
-.
-length
-;
-i
-+
-+
-)
-{
-var
-t
-=
-tests
-[
-i
-]
-;
 var
 v
 =
@@ -4626,57 +4647,35 @@ video
 "
 )
 ;
-videos
-.
-push
-(
 v
-)
+.
+token
+=
+token
 ;
-t
+test
 .
 setup
 (
 v
 )
 ;
-}
-}
-if
-(
-test
-&
-&
-videos
+manager
 .
-length
-=
-=
-0
-)
-{
-todo
+started
 (
-false
-"
-No
-types
-or
+token
+)
+;
+}
+manager
+.
+runTests
+(
 tests
-supported
-"
+startTest
 )
 ;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
