--- a/content/media/test/test_replay_metadata.html
+++ b/content/media/test/test_replay_metadata.html
@@ -248,10 +248,10 @@ loadedmetadata
 events
 .
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 seekStarted
@@ -694,42 +694,34 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-{
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
 )
 ;
-}
+manager
+.
+finished
+(
+v
+.
+token
+)
+;
 }
 return
 false
 ;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
 var
@@ -744,27 +736,18 @@ video
 '
 )
 ;
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -911,44 +894,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
