--- a/content/media/test/test_video_to_canvas.html
+++ b/content/media/test/test_video_to_canvas.html
@@ -163,10 +163,10 @@ javascript
 "
 >
 var
-videos
+manager
 =
-[
-]
+new
+MediaTestManager
 ;
 function
 loaded
@@ -325,49 +325,35 @@ _finished
 =
 true
 ;
-if
-(
-AllFinished
-(
-videos
-)
-)
-SimpleTest
+v
 .
-finish
+parentNode
+.
+removeChild
 (
+v
+)
+;
+manager
+.
+finished
+(
+v
+.
+token
 )
 ;
 return
 false
 ;
 }
-for
+function
+startTest
 (
-var
-i
-=
-0
-;
-i
-<
-gSmallTests
-.
-length
-;
-+
-+
-i
+test
+token
 )
 {
-var
-test
-=
-gSmallTests
-[
-i
-]
-;
 var
 isVideo
 =
@@ -392,7 +378,7 @@ if
 !
 isVideo
 )
-continue
+return
 ;
 var
 v
@@ -406,19 +392,18 @@ video
 '
 )
 ;
-if
-(
-!
 v
 .
-canPlayType
-(
-test
+token
+=
+token
+;
+manager
 .
-type
+started
+(
+token
 )
-)
-continue
 ;
 v
 .
@@ -478,44 +463,15 @@ appendChild
 v
 )
 ;
-videos
+}
+manager
 .
-push
+runTests
 (
-v
+gSmallTests
+startTest
 )
 ;
-}
-if
-(
-videos
-.
-length
-=
-=
-0
-)
-{
-todo
-(
-false
-"
-No
-types
-supported
-"
-)
-;
-}
-else
-{
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-}
 <
 /
 script
