Bug 586046. Export graphics card/driver details to script using GfxInfo. r=gavin
UltraBlame original commit: 0866f70e0bd9495d3882a39f52a0068b00ab5752

--- a/toolkit/content/aboutSupport.xhtml
+++ b/toolkit/content/aboutSupport.xhtml
@@ -1292,42 +1292,13 @@ table
 >
 <
 tbody
->
-<
-tr
->
-<
-th
-class
-=
-"
-column
-"
->
-&
-aboutSupport
-.
-graphicsDirect2DEnabled
-;
-<
-/
-th
->
-<
-td
 id
 =
 "
-direct2d
+graphics
+-
+tbody
 "
->
-<
-/
-td
->
-<
-/
-tr
 >
 <
 /
