Bug 589490 - Implement constraint validation API for <object>. r=sicking a=blocking
UltraBlame original commit: 8af40170cdb4bfa144e730a51b48416cc51393b1

--- a/content/html/content/test/test_bug345624-1.html
+++ b/content/html/content/test/test_bug345624-1.html
@@ -108,6 +108,7 @@ button
 select
 keygen
 output
+object
 {
 background
 -
@@ -346,6 +347,18 @@ o
 <
 /
 output
+>
+<
+object
+id
+=
+'
+obj
+'
+>
+<
+/
+object
 >
 <
 /
@@ -1048,6 +1061,51 @@ apply
 "
 )
 ;
+is
+(
+window
+.
+getComputedStyle
+(
+document
+.
+getElementById
+(
+'
+obj
+'
+)
+null
+)
+.
+getPropertyValue
+(
+'
+background
+-
+color
+'
+)
+"
+rgb
+(
+0
+0
+0
+)
+"
+"
+Nor
+:
+valid
+and
+:
+invalid
+should
+apply
+"
+)
+;
 todo_is
 (
 window
@@ -1279,6 +1337,7 @@ checkSpecificWillValidate
 /
 fieldset
 output
+object
 keygen
 (
 TODO
@@ -1326,6 +1385,31 @@ o
 willValidate
 "
 Output
+element
+should
+be
+barred
+from
+constraint
+validation
+"
+)
+;
+ok
+(
+!
+document
+.
+getElementById
+(
+'
+obj
+'
+)
+.
+willValidate
+"
+Object
 element
 should
 be
@@ -2083,19 +2167,6 @@ apply
 "
 )
 ;
-/
-/
-TODO
-:
-output
-elements
-are
-always
-barred
-from
-constraint
-validation
-.
 /
 /
 TODO
@@ -2990,6 +3061,18 @@ o
 )
 )
 ;
+checkConstraintValidationAPIExist
+(
+document
+.
+getElementById
+(
+'
+obj
+'
+)
+)
+;
 checkConstraintValidationAPIDefaultValues
 (
 document
@@ -3074,6 +3157,18 @@ o
 )
 )
 ;
+checkConstraintValidationAPIDefaultValues
+(
+document
+.
+getElementById
+(
+'
+obj
+'
+)
+)
+;
 checkDefaultPseudoClass
 (
 )
@@ -3088,6 +3183,7 @@ Not
 checking
 fieldset
 output
+object
 and
 keygen
 /
@@ -3238,12 +3334,26 @@ o
 true
 )
 ;
+checkCustomError
+(
+document
+.
+getElementById
+(
+'
+obj
+'
+)
+true
+)
+;
 /
 /
 Not
 checking
 fieldset
 output
+object
 and
 keygen
 /
@@ -3355,6 +3465,13 @@ checkValidityStateObjectAliveWithoutElement
 (
 "
 output
+"
+)
+;
+checkValidityStateObjectAliveWithoutElement
+(
+"
+object
 "
 )
 ;
