Bug 591847 - Don't test audio write API when the audio hardware is disabled. a=test-fix
UltraBlame original commit: b68354fbfb713ad6ff7ced7c63a43469d96e8955

--- a/content/media/test/test_audiowrite.html
+++ b/content/media/test/test_audiowrite.html
@@ -190,6 +190,8 @@ Audio
 (
 )
 ;
+try
+{
 a1
 .
 mozSetup
@@ -198,6 +200,39 @@ channels
 rate
 )
 ;
+}
+catch
+(
+ex
+)
+{
+todo
+(
+false
+"
+Audio
+hardware
+is
+disabled
+can
+'
+t
+test
+audio
+write
+API
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 is
 (
 a1
