Bug 489813 - Fire timeout error if provider fails to response after initial response.  Also cleans up test. r=smaug a=jst
UltraBlame original commit: 0d8d6369655d6b16c11cbf97afa761890016634c

--- a/dom/tests/mochitest/geolocation/test_allowCurrent.html
+++ b/dom/tests/mochitest/geolocation/test_allowCurrent.html
@@ -215,10 +215,20 @@ text
 javascript
 "
 >
-var
-hasAccepted
-=
-false
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
 ;
 function
 successCallback
@@ -226,21 +236,13 @@ successCallback
 position
 )
 {
-ok
-(
-hasAccepted
-"
-Ensure
-that
-accept
-was
-pressed
-"
-)
-;
 check_geolocation
 (
 position
+)
+;
+reset_prompt
+(
 )
 ;
 SimpleTest
@@ -250,43 +252,6 @@ finish
 )
 ;
 }
-function
-accept
-(
-)
-{
-hasAccepted
-=
-true
-;
-clickNotificationButton
-(
-kAcceptButton
-)
-;
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-var
-options
-=
-{
-maximumAge
-:
-0
-}
-;
-/
-/
-one
--
-shot
-position
-requests
 navigator
 .
 geolocation
@@ -294,14 +259,6 @@ geolocation
 getCurrentPosition
 (
 successCallback
-null
-options
-)
-;
-setTimeout
-(
-accept
-50
 )
 ;
 <
