--- a/dom/tests/mochitest/geolocation/test_allowWatch.html
+++ b/dom/tests/mochitest/geolocation/test_allowWatch.html
@@ -215,13 +215,23 @@ text
 javascript
 "
 >
-var
-watchID
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
 ;
 var
-hasAccepted
-=
-false
+watchID
 ;
 function
 successCallback
@@ -229,18 +239,6 @@ successCallback
 position
 )
 {
-ok
-(
-hasAccepted
-"
-Ensure
-that
-accept
-was
-pressed
-"
-)
-;
 check_geolocation
 (
 position
@@ -255,6 +253,10 @@ clearWatch
 watchID
 )
 ;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
@@ -262,36 +264,6 @@ finish
 )
 ;
 }
-function
-accept
-(
-)
-{
-hasAccepted
-=
-true
-;
-clickNotificationButton
-(
-kAcceptButton
-)
-;
-}
-/
-*
-*
-Test
-for
-Bug
-*
-*
-/
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 watchID
 =
 navigator
@@ -303,12 +275,6 @@ watchPosition
 successCallback
 null
 null
-)
-;
-setTimeout
-(
-accept
-50
 )
 ;
 <
