--- a/dom/tests/mochitest/geolocation/test_cancelCurrent.html
+++ b/dom/tests/mochitest/geolocation/test_cancelCurrent.html
@@ -215,6 +215,21 @@ text
 javascript
 "
 >
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+false
+)
+;
 function
 failureCallback
 (
@@ -239,6 +254,10 @@ error
 was
 PERMISSION_DENIED
 "
+)
+;
+reset_prompt
+(
 )
 ;
 SimpleTest
@@ -274,6 +293,10 @@ problem
 "
 )
 ;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
@@ -281,21 +304,6 @@ finish
 )
 ;
 }
-/
-*
-*
-Test
-for
-Bug
-*
-*
-/
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 navigator
 .
 geolocation
@@ -305,17 +313,6 @@ getCurrentPosition
 successCallback
 failureCallback
 null
-)
-;
-/
-/
-click
-deny
-setTimeout
-(
-clickNotificationButton
-50
-kDenyButton
 )
 ;
 <
