--- a/dom/tests/mochitest/geolocation/test_garbageWatch.html
+++ b/dom/tests/mochitest/geolocation/test_garbageWatch.html
@@ -235,6 +235,15 @@ waitForExplicitFinish
 (
 )
 ;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
+;
 start_sending_garbage
 (
 )
@@ -260,6 +269,10 @@ called
 )
 ;
 stop_sending_garbage
+(
+)
+;
+reset_prompt
 (
 )
 ;
@@ -300,6 +313,10 @@ stop_sending_garbage
 (
 )
 ;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
@@ -328,13 +345,6 @@ watchPosition
 successCallback
 errorCallback
 options
-)
-;
-setTimeout
-(
-clickNotificationButton
-10
-kAcceptButton
 )
 ;
 <
