--- a/dom/tests/mochitest/geolocation/test_manyWindows.html
+++ b/dom/tests/mochitest/geolocation/test_manyWindows.html
@@ -218,6 +218,25 @@ javascript
 "
 >
 /
+/
+ensure
+we
+are
+using
+the
+right
+testing
+provider
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
+;
+/
 *
 *
 Test
@@ -381,6 +400,10 @@ crash
 clearInterval
 (
 timer
+)
+;
+reset_prompt
+(
 )
 ;
 SimpleTest
