--- a/dom/tests/mochitest/geolocation/test_optional_api_params.html
+++ b/dom/tests/mochitest/geolocation/test_optional_api_params.html
@@ -217,6 +217,24 @@ javascript
 "
 >
 /
+/
+ensure
+we
+are
+using
+the
+right
+testing
+provider
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
+/
 *
 *
 Test
@@ -654,14 +672,6 @@ exception
 ;
 /
 /
-Successful
-calls
-trigger
-a
-geolocation
-notification
-/
-/
 so
 clean
 up
@@ -671,9 +681,8 @@ the
 next
 test
 .
-clickNotificationButton
+reset_prompt
 (
-kAcceptButton
 )
 ;
 <
