--- a/dom/tests/mochitest/geolocation/test_timerRestartWatch.html
+++ b/dom/tests/mochitest/geolocation/test_timerRestartWatch.html
@@ -14,8 +14,7 @@ title
 >
 Test
 for
-timeout
-option
+watchPosition
 <
 /
 title
@@ -152,12 +151,12 @@ cgi
 ?
 id
 =
-455327
+526326
 "
 >
 Mozilla
 Bug
-478911
+526326
 <
 /
 a
@@ -216,15 +215,12 @@ text
 javascript
 "
 >
-/
-*
-*
-Test
-for
-Bug
-*
-*
-/
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
 /
 /
 ensure
@@ -244,83 +240,15 @@ force_prompt
 true
 )
 ;
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
+var
+watchID
 ;
-stop_geolocationProvider
-(
-)
-;
-function
-successCallback
-(
-pos
-)
-{
-ok
-(
-false
-"
-success
-should
-have
-never
-been
-called
-.
-"
-)
-;
-resume_geolocationProvider
-(
-)
-;
-reset_prompt
-(
-)
-SimpleTest
-.
-finish
-(
-)
-;
-}
 function
 errorCallback
 (
 err
 )
 {
-if
-(
-err
-.
-code
-=
-=
-err
-.
-POSITION_UNAVAILABLE
-)
-ok
-(
-false
-"
-nothing
-is
-hooked
-up
-to
-test
-against
-.
-"
-)
-;
-else
 ok
 (
 err
@@ -348,9 +276,43 @@ resume_geolocationProvider
 reset_prompt
 (
 )
+;
 SimpleTest
 .
 finish
+(
+)
+;
+}
+function
+successCallback
+(
+position
+)
+{
+/
+/
+Now
+that
+we
+got
+a
+success
+callback
+lets
+try
+to
+ensure
+/
+/
+that
+we
+get
+a
+timeout
+error
+.
+stop_geolocationProvider
 (
 )
 ;
@@ -364,9 +326,11 @@ maximumAge
 0
 timeout
 :
-10
+1000
 }
 ;
+watchID
+=
 navigator
 .
 geolocation
