--- a/dom/tests/mochitest/geolocation/test_cancelWatch.html
+++ b/dom/tests/mochitest/geolocation/test_cancelWatch.html
@@ -215,6 +215,21 @@ text
 javascript
 "
 >
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+false
+)
+;
 var
 watchID
 ;
@@ -242,6 +257,10 @@ error
 was
 PERMISSION_DENIED
 "
+)
+;
+reset_prompt
+(
 )
 ;
 SimpleTest
@@ -277,6 +296,10 @@ problem
 "
 )
 ;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
@@ -284,21 +307,6 @@ finish
 )
 ;
 }
-/
-*
-*
-Test
-for
-Bug
-*
-*
-/
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 watchID
 =
 navigator
@@ -310,17 +318,6 @@ watchPosition
 successCallback
 failureCallback
 null
-)
-;
-/
-/
-click
-deny
-setTimeout
-(
-clickNotificationButton
-50
-kDenyButton
 )
 ;
 <
