--- a/dom/tests/mochitest/geolocation/test_clearWatch.html
+++ b/dom/tests/mochitest/geolocation/test_clearWatch.html
@@ -217,11 +217,27 @@ text
 javascript
 "
 >
-var
-watchID
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
 ;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
 var
 hasBeenCleared
+=
+false
+;
+var
+successWasCalledAfterClear
 =
 false
 ;
@@ -262,25 +278,9 @@ hasBeenCleared
 true
 )
 {
-/
-/
-we
-should
-not
-be
-called
-here
-ok
-(
-0
-"
-successCallback
-was
-called
-after
-clear
-"
-)
+successWasCalledAfterClear
+=
+true
 ;
 }
 }
@@ -308,6 +308,26 @@ testAccepted
 (
 )
 {
+ok
+(
+!
+successWasCalledAfterClear
+"
+The
+successCallback
+should
+not
+be
+called
+after
+clear
+"
+)
+;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
@@ -315,21 +335,6 @@ finish
 )
 ;
 }
-/
-*
-*
-Test
-for
-Bug
-*
-*
-/
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 watchID
 =
 navigator
@@ -345,27 +350,14 @@ null
 ;
 setTimeout
 (
-clickNotificationButton
-10
-kAcceptButton
-)
-;
-setTimeout
-(
 clearWatch
-50
+250
 )
 ;
-/
-/
-wait
-for
-position
-changes
 setTimeout
 (
 testAccepted
-1000
+2000
 )
 ;
 <
