--- a/dom/tests/mochitest/geolocation/test_manyCurrentSerial.html
+++ b/dom/tests/mochitest/geolocation/test_manyCurrentSerial.html
@@ -215,15 +215,24 @@ text
 javascript
 "
 >
-var
-completeCount
-=
-1000
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
 ;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
 var
-hasAccepted
+keepGoing
 =
-false
+10
 ;
 function
 successCallback
@@ -231,21 +240,21 @@ successCallback
 position
 )
 {
-check_geolocation
-(
-position
-)
-;
-completeCount
--
--
-;
 if
 (
-completeCount
+keepGoing
+-
+-
 >
 0
 )
+{
+setTimeout
+(
+function
+(
+)
+{
 navigator
 .
 geolocation
@@ -253,8 +262,27 @@ geolocation
 getCurrentPosition
 (
 successCallback
-null
-null
+)
+;
+}
+0
+)
+;
+return
+;
+}
+ok
+(
+1
+"
+100
+successful
+calls
+"
+)
+;
+reset_prompt
+(
 )
 ;
 SimpleTest
@@ -264,43 +292,6 @@ finish
 )
 ;
 }
-function
-accept
-(
-)
-{
-hasAccepted
-=
-true
-;
-clickNotificationButton
-(
-kAcceptButton
-)
-;
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-var
-options
-=
-{
-maximumAge
-:
-0
-}
-;
-/
-/
-one
--
-shot
-position
-requests
 navigator
 .
 geolocation
@@ -308,14 +299,6 @@ geolocation
 getCurrentPosition
 (
 successCallback
-null
-options
-)
-;
-setTimeout
-(
-accept
-50
 )
 ;
 <
