--- a/dom/tests/mochitest/geolocation/test_manyWatchSerial.html
+++ b/dom/tests/mochitest/geolocation/test_manyWatchSerial.html
@@ -215,10 +215,20 @@ text
 javascript
 "
 >
-var
-hasAccepted
-=
-false
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+resume_geolocationProvider
+(
+)
+;
+force_prompt
+(
+true
+)
 ;
 var
 watchID
@@ -230,26 +240,12 @@ completeCount
 =
 10
 ;
-var
-options
-=
-{
-maximumAge
-:
-0
-}
-;
 function
 successCallback
 (
 position
 )
 {
-check_geolocation
-(
-position
-)
-;
 navigator
 .
 geolocation
@@ -282,15 +278,19 @@ called
 "
 )
 ;
+reset_prompt
+(
+)
+;
 SimpleTest
 .
 finish
 (
 )
 ;
+return
+;
 }
-else
-{
 watchID
 =
 navigator
@@ -300,46 +300,9 @@ geolocation
 watchPosition
 (
 successCallback
-null
-options
-)
-;
-setTimeout
-(
-accept
-50
 )
 ;
 }
-}
-function
-accept
-(
-)
-{
-hasAccepted
-=
-true
-;
-clickNotificationButton
-(
-kAcceptButton
-)
-;
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-/
-/
-one
--
-shot
-position
-requests
 watchID
 =
 navigator
@@ -349,14 +312,6 @@ geolocation
 watchPosition
 (
 successCallback
-null
-options
-)
-;
-setTimeout
-(
-accept
-50
 )
 ;
 <
