--- a/dom/tests/mochitest/geolocation/test_windowClose.html
+++ b/dom/tests/mochitest/geolocation/test_windowClose.html
@@ -222,9 +222,25 @@ done
 (
 )
 {
+ok
+(
+1
+"
+no
+crash
+so
+pass
+.
+"
+)
+;
 SimpleTest
 .
 finish
+(
+)
+;
+reset_prompt
 (
 )
 ;
@@ -233,6 +249,11 @@ SimpleTest
 .
 waitForExplicitFinish
 (
+)
+;
+force_prompt
+(
+true
 )
 ;
 window
