Bug 591435. Fix tests that were relying on there being no paint suppression in subdocuments. r=roc
UltraBlame original commit: b38d6617f160518d014312c1f1cb993c2f180dd4

--- a/content/base/test/test_bug333198.html
+++ b/content/base/test/test_bug333198.html
@@ -104,6 +104,16 @@ head
 >
 <
 body
+onload
+=
+"
+setTimeout
+(
+runTest
+0
+)
+;
+"
 >
 <
 iframe
@@ -651,11 +661,6 @@ SimpleTest
 .
 waitForExplicitFinish
 (
-)
-;
-addLoadEvent
-(
-runTest
 )
 ;
 <
