--- a/content/events/test/test_bug402089.html
+++ b/content/events/test/test_bug402089.html
@@ -130,6 +130,16 @@ head
 >
 <
 body
+onload
+=
+"
+setTimeout
+(
+doTest
+0
+)
+;
+"
 >
 <
 a
@@ -578,11 +588,6 @@ SimpleTest
 .
 waitForExplicitFinish
 (
-)
-;
-addLoadEvent
-(
-doTest
 )
 ;
 <
