--- a/content/base/test/test_bug564863.xhtml
+++ b/content/base/test/test_bug564863.xhtml
@@ -2333,9 +2333,13 @@ appendChild
 div
 )
 ;
-var
-f
-=
+div
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
 function
 (
 e
@@ -2348,7 +2352,9 @@ removeEventListener
 "
 DOMAttrModified
 "
-f
+arguments
+.
+callee
 false
 )
 ;
@@ -2425,14 +2431,6 @@ mutateFired
 true
 ;
 }
-div
-.
-addEventListener
-(
-"
-DOMAttrModified
-"
-f
 false
 )
 ;
@@ -2495,9 +2493,13 @@ appendChild
 nsx
 )
 ;
-var
-f2
-=
+nsx
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
 function
 (
 e
@@ -2510,7 +2512,9 @@ removeEventListener
 "
 DOMAttrModified
 "
-f2
+arguments
+.
+callee
 false
 )
 ;
@@ -2571,14 +2575,6 @@ mutateFired
 true
 ;
 }
-nsx
-.
-addEventListener
-(
-"
-DOMAttrModified
-"
-f2
 false
 )
 ;
@@ -2726,6 +2722,43 @@ prefix
 ns2
 "
 ;
+is
+(
+(
+"
+ns2_id
+"
+)
+nsx
+"
+gEBI
+works
+on
+new
+id
+"
+)
+;
+is
+(
+(
+"
+ns_id
+"
+)
+null
+"
+gEBI
+does
+'
+t
+work
+on
+old
+id
+"
+)
+;
 removeNode
 (
 nsx
@@ -2769,6 +2802,7 @@ ns2_id
 nsx
 "
 gEBI
+still
 works
 on
 new
@@ -2968,6 +3002,1032 @@ when
 accessing
 old
 id
+"
+)
+;
+/
+/
+Update
+the
+id
+-
+name
+inside
+a
+mutation
+event
+removeNode
+(
+nsx
+)
+;
+nsx
+=
+document
+.
+createElementNS
+(
+"
+urn
+:
+namespace
+"
+"
+ns
+:
+x
+"
+)
+;
+nsx
+.
+setAttribute
+(
+"
+id
+"
+"
+ns_id
+"
+)
+;
+nsx
+.
+setAttribute
+(
+"
+id_2
+"
+"
+ns2_id
+"
+)
+;
+root
+.
+appendChild
+(
+nsx
+)
+;
+is
+(
+(
+"
+ns_id
+"
+)
+nsx
+"
+new
+nsx
+is
+set
+up
+"
+)
+;
+is
+(
+(
+"
+ns2_id
+"
+)
+null
+"
+ns2_id
+doesn
+'
+t
+exist
+"
+)
+;
+mutateFired
+=
+false
+;
+nsx
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
+function
+(
+e
+)
+{
+nsx
+.
+removeEventListener
+(
+"
+DOMAttrModified
+"
+arguments
+.
+callee
+false
+)
+;
+is
+(
+e
+.
+target
+nsx
+"
+target
+is
+nsx
+"
+)
+;
+is
+(
+nsx
+.
+getAttribute
+(
+"
+id
+"
+)
+null
+"
+nsx
+no
+longer
+has
+id
+attr
+"
+)
+;
+nsx
+.
+prefix
+=
+"
+ns2
+"
+;
+mutateFired
+=
+true
+;
+}
+false
+)
+;
+nsx
+.
+removeAttribute
+(
+"
+id
+"
+)
+;
+ok
+(
+mutateFired
+"
+mutation
+event
+fired
+"
+)
+;
+is
+(
+(
+"
+ns_id
+"
+)
+null
+"
+ns_id
+was
+removed
+from
+table
+"
+)
+;
+is
+(
+(
+"
+ns2_id
+"
+)
+nsx
+"
+ns2_id
+was
+added
+"
+)
+;
+removeNode
+(
+nsx
+)
+;
+is
+(
+(
+"
+ns2_id
+"
+)
+null
+"
+ns2_id
+was
+removed
+"
+)
+;
+nsx
+=
+null
+;
+gc
+(
+)
+;
+(
+"
+ns2_id
+"
+)
+;
+ok
+(
+true
+"
+we
+didn
+'
+t
+crash
+"
+)
+;
+/
+/
+Re
+-
+add
+the
+id
+inside
+a
+mutation
+event
+on
+a
+XML
+element
+is
+(
+(
+"
+ns_id
+"
+)
+null
+"
+no
+nsx
+"
+)
+;
+is
+(
+(
+"
+ns2_id
+"
+)
+null
+"
+no
+nsx
+"
+)
+;
+nsx
+=
+document
+.
+createElementNS
+(
+"
+urn
+:
+namespace
+"
+"
+ns
+:
+x
+"
+)
+;
+nsx
+.
+setAttribute
+(
+"
+id
+"
+"
+ns_id
+"
+)
+;
+root
+.
+appendChild
+(
+nsx
+)
+;
+is
+(
+(
+"
+ns_id
+"
+)
+nsx
+"
+new
+nsx
+is
+set
+up
+"
+)
+;
+mutateFired
+=
+false
+;
+nsx
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
+function
+(
+e
+)
+{
+nsx
+.
+removeEventListener
+(
+"
+DOMAttrModified
+"
+arguments
+.
+callee
+false
+)
+;
+is
+(
+e
+.
+target
+nsx
+"
+target
+is
+nsx
+"
+)
+;
+is
+(
+nsx
+.
+getAttribute
+(
+"
+id
+"
+)
+null
+"
+nsx
+no
+longer
+has
+id
+attr
+"
+)
+;
+nsx
+.
+setAttribute
+(
+"
+id
+"
+"
+other_id
+"
+)
+;
+mutateFired
+=
+true
+;
+}
+false
+)
+;
+nsx
+.
+removeAttribute
+(
+"
+id
+"
+)
+;
+ok
+(
+mutateFired
+"
+mutation
+event
+fired
+"
+)
+;
+is
+(
+(
+"
+ns_id
+"
+)
+null
+"
+ns_id
+was
+removed
+from
+table
+"
+)
+;
+is
+(
+(
+"
+other_id
+"
+)
+nsx
+"
+other_id
+was
+added
+"
+)
+;
+removeNode
+(
+nsx
+)
+;
+is
+(
+(
+"
+other_id
+"
+)
+null
+"
+other_id
+was
+removed
+"
+)
+;
+/
+/
+Re
+-
+add
+the
+id
+inside
+a
+mutation
+event
+on
+a
+HTML
+element
+is
+(
+(
+"
+div_id
+"
+)
+null
+"
+no
+div
+"
+)
+;
+div
+=
+document
+.
+createElement
+(
+"
+div
+"
+)
+;
+div
+.
+id
+=
+"
+div_id
+"
+;
+root
+.
+appendChild
+(
+div
+)
+;
+is
+(
+(
+"
+div_id
+"
+)
+div
+"
+new
+div
+is
+set
+up
+"
+)
+;
+mutateFired
+=
+false
+;
+div
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
+function
+(
+e
+)
+{
+div
+.
+removeEventListener
+(
+"
+DOMAttrModified
+"
+arguments
+.
+callee
+false
+)
+;
+is
+(
+e
+.
+target
+div
+"
+target
+is
+div
+"
+)
+;
+is
+(
+div
+.
+getAttribute
+(
+"
+id
+"
+)
+null
+"
+div
+no
+longer
+has
+id
+attr
+"
+)
+;
+is
+(
+div
+.
+id
+"
+"
+"
+div
+no
+longer
+has
+id
+"
+)
+;
+div
+.
+id
+=
+"
+other_div_id
+"
+;
+mutateFired
+=
+true
+;
+}
+false
+)
+;
+div
+.
+removeAttribute
+(
+"
+id
+"
+)
+;
+ok
+(
+mutateFired
+"
+mutation
+event
+fired
+"
+)
+;
+is
+(
+(
+"
+div_id
+"
+)
+null
+"
+div_id
+was
+removed
+from
+table
+"
+)
+;
+is
+(
+(
+"
+other_div_id
+"
+)
+div
+"
+other_div_id
+was
+added
+"
+)
+;
+removeNode
+(
+div
+)
+;
+is
+(
+(
+"
+other_div_id
+"
+)
+null
+"
+other_div_id
+was
+removed
+"
+)
+;
+/
+/
+Re
+-
+add
+the
+id
+inside
+a
+mutation
+event
+on
+a
+XUL
+element
+is
+(
+(
+"
+xul_id
+"
+)
+null
+"
+no
+xul
+"
+)
+;
+xul
+=
+document
+.
+createElementNS
+(
+"
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+keymaster
+/
+gatekeeper
+/
+there
+.
+is
+.
+only
+.
+xul
+"
+"
+button
+"
+)
+;
+xul
+.
+id
+=
+"
+xul_id
+"
+;
+root
+.
+appendChild
+(
+xul
+)
+;
+is
+(
+(
+"
+xul_id
+"
+)
+xul
+"
+new
+xul
+is
+set
+up
+"
+)
+;
+mutateFired
+=
+false
+;
+xul
+.
+addEventListener
+(
+"
+DOMAttrModified
+"
+function
+(
+e
+)
+{
+xul
+.
+removeEventListener
+(
+"
+DOMAttrModified
+"
+arguments
+.
+callee
+false
+)
+;
+is
+(
+e
+.
+target
+xul
+"
+target
+is
+xul
+"
+)
+;
+is
+(
+xul
+.
+getAttribute
+(
+"
+id
+"
+)
+"
+"
+"
+xul
+no
+longer
+has
+id
+attr
+"
+)
+;
+is
+(
+xul
+.
+id
+"
+"
+"
+xul
+no
+longer
+has
+id
+"
+)
+;
+xul
+.
+id
+=
+"
+other_xul_id
+"
+;
+mutateFired
+=
+true
+;
+}
+false
+)
+;
+xul
+.
+removeAttribute
+(
+"
+id
+"
+)
+;
+ok
+(
+mutateFired
+"
+mutation
+event
+fired
+"
+)
+;
+is
+(
+(
+"
+xul_id
+"
+)
+null
+"
+xul_id
+was
+removed
+from
+table
+"
+)
+;
+is
+(
+(
+"
+other_xul_id
+"
+)
+xul
+"
+other_xul_id
+was
+added
+"
+)
+;
+removeNode
+(
+xul
+)
+;
+is
+(
+(
+"
+other_xul_id
+"
+)
+null
+"
+other_xul_id
+was
+removed
 "
 )
 ;
